# kobe-shot-model

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters.yml
data/01_raw/: dataset_kobe_dev.parquet  dataset_kobe_prod.parquet
data/02_intermediate/: dataset_kobe_dev.parquet  dataset_kobe_prod.parquet
data/04_feature/: dataset_kobe_dev.parquet  dataset_kobe_prod.parquet
data/05_model_input/: test_dataset_kobe_dev.parquet  test_dataset_kobe_prod.parquet  train_dataset_kobe_dev.parquet  train_dataset_kobe_prod.parquet
data/08_reporting/: best_model_report_dev.csv  best_model_report_prod.csv  dt_model_metrics_dev.txt  dt_model_metrics_prod.txt  lr_model_metric_prod.txt  lr_model_metrics_dev.txt
docs/: EVALUATION_RUBRIC.md  SETUP.md  project_flow.excalidraw
mlartifacts/241919081044893865/1785733683c24a5191435b715995f4e6/artifacts/decision_tree_model/: MLmodel  model.pkl
notebooks/: compare_models.ipynb  dimension_initial_dataset.ipynb  lg_regression_decision_three.ipynb  model.ipynb
src/kedro_ml/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/kedro_ml/nodes/: best_model.py  data_acquisition.py  data_feature.py  data_preparation.py  data_splitting.py  models.py  plots.py
src/kedro_ml/pipelines/: __init__.py
src/kedro_ml/pipelines/shot_model/: pipeline.py
src/kedro_ml/pipelines/shot_model_dev/: pipeline.py
src/kedro_ml/pipelines/shot_model_prod/: pipeline.py
streamlit/: main.py
streamlit/pages/: 01-Setup.py  02-Evaluation Rubric.py  03-README.py
(+21 files in other folders)
